--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-<textarea id="chatOutput" name="" class="chatting_history" rows="24"></textarea>
-<div class=chatting_input">
-  <input id="chatInput" type="text" class="chat">
+  <title>Hello WebSocket</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link href="css/main.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/webjars/sockjs-client/1.0.2/sockjs.min.js"></script>
   <script src="/webjars/stomp-websocket/2.3.3/stomp.min.js"></script>
-  <script src="js/socket.js"></script>
-  <!--<script src="js/socket.js"></script>-->
+  <script src="js/app.js"></script>
+</head>
+<body>
+<noscript><h2 style="color: #FF0000">Seems your browser doesn't support Javascript! Websocket relies on
+  Javascript being
+  enabled. Please enable
+  Javascript and reload this page!</h2></noscript>
+<div id="main-content" class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="connect">WebSocket connection:</label>
+          <button id="connect" class="btn btn-default" type="submit">Connect</button>
+          <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect
+          </button>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-6">
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="name">What is your name?</label>
+          <input type="text" id="name" class="form-control" placeholder="Your name here...">
+        </div>
+        <button id="send" class="btn btn-default" type="submit">Send</button>
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <table id="conversation" class="table table-striped">
+        <thead>
+        <tr>
+          <th>Greetings</th>
+        </tr>
+        </thead>
+        <tbody id="greetings">
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 </body>
 </html>
